adding zeeva's style

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -31,8 +31,9 @@ h3,
 h4,
 h5,
 h6 {
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    /**text-transform: uppercase;*/
+    font-family: Poiret One,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    letter-spacing: .1em;
     font-weight: 700;
 }
 
@@ -97,8 +98,8 @@ header img {
 
 header .intro-text .name {
     display: block;
-    text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Poiret One,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    letter-spacing: .1em;
     font-size: 2em;
     font-weight: 700;
 }
@@ -149,7 +150,8 @@ header .intro-text .skills {
 
 .navbar {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Poiret One,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    letter-spacing: .2em;
     font-weight: 700;
 }
 
