get rid of contact

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
     {% include modals.html %}
     {% include js.html %}
     </body>
-    /** {% if site.contact == "static" %}
+    <!-- {% if site.contact == "static" %}
     {% include contact_static.html %}
     {% else %}
     {% include contact.html %}
-    {% endif %} */
+    {% endif %} */ -->
 </html>
